syntax = "proto3";

package howling.trading;

import "google/protobuf/timestamp.proto";
import "data/stock.proto";

enum Action {
  ACTION_UNSPECIFIED = 0;
  HOLD = 1;
  BUY = 2;
  SELL = 3;
}

message TradeRecord {
  howling.stock.Symbol symbol = 1;
  google.protobuf.Timestamp executed_at = 2;
  Action action = 3;
  double price = 4;
  int64 quantity = 5;
  double confidence = 6;
  bool dry_run = 7;
}
